# discord-link-bot

./: LICENSE  README.md  config.example.yaml  pyproject.toml  pytest.ini
src/discord_link_bot/: __init__.py  __main__.py
tests/: test_main.py
